# usbd-audio

./: .gitmodules  Cargo.toml
examples/teensy4/: Cargo.toml  build.sh  filter_design.py
examples/teensy4/src/: audio.rs  pfb.rs  support.rs
src/: channels.rs  control.rs  descriptors.rs  lib.rs
