[package]
name = "usbd-audio"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
[dependencies.usb-device]
version = "0.2"
features = [ "control-buffer-512" ]

[dependencies.log]
version = "0.4"

[dependencies.modular-bitfield]
version = "0.11.2"

[patch.crates-io]
usb-device = { path = "./libs/usb-device" }
